force-app/main/default/objects/ProjDash_ProjectPulse__c/ProjDash_ProjectPulse__c.object-meta.xml
<CustomObject>
    <description>ProjDash - This custom object holds all pulses for a project</description>
    <label>Project Pulse</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Project Pulse</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Pulses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>