force-app/main/default/objects/ProjDash_ProjectPulse__c/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <description>Project Pulse Blockers</description>
    <inlineHelpText>Please enter individual Blockers on a separate line</inlineHelpText>
    <label>Blockers</label>
    <length>600</length>
    <type>Html</type>
</CustomField>