force-app/main/default/objects/ProjDash_ProjectPulse__c/fields/Escalations__c.field-meta.xml
<CustomField>
    <fullName>Escalations__c</fullName>
    <inlineHelpText>Please enter separate Escalations in the following format:
1 - 
2 - 
3 -</inlineHelpText>
    <label>Escalations</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>