force-app/main/default/objects/ProjDash_ProjectPulse__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <referenceTo>ProjDash_Project__c</referenceTo>
    <relationshipLabel>Project Pulses</relationshipLabel>
    <relationshipName>Project_Pulses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>