force-app/main/default/objects/ProjDash_ProjectPulse__c/fields/Pulse_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On Approval of the pulse record, as a part of Approval action this fields need to be updated to trigger the process builder.</description>
    <label>Pulse Approved</label>
    <type>Checkbox</type>
</CustomField>