force-app/main/default/objects/ProjDash_ProjectPulse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Pulse_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>